Mon Oct 14 16:30 2013 CDT
    * lib/server.js: Rate-limit socket.io connections
    * lib/bgtask.js: Periodically clear out old rate limiters

Sat Oct 12 19:43 2013 CDT
    * lib/user.js: Fix jumpTo kick bug (and delete)
    * lib/api.js: Fix unloaded channel API listing bug

Sat Oct 12 19:02 2013 CDT
    * lib/chatcommand.js: Fix poll import

Sat Oct 12 18:58 2013 CDT
    * lib/user.js, lib/channel.js: Improve strictness of data checking
      to prevent errors from incoming bad data.  Kick users who send
      bad data or attempt channel moderation with insufficient rank.

Sat Oct 12 18:24 2013 CDT
    * lib/user.js: Fix bad chatMsg packet causing exceptions

Sat Oct 12 15:53 2013 CDT
    * lib/channel.js: Add a try-catch to playlist loading to catch
      the mysterious error that's been coming up (corrupt pl?)

Mon Oct 07 19:00 2013 CDT
    * lib/channel.js: Rearrange the callback order to prevent database
      lookups from racing with the playlist queue.
    * tests/naokosimulator2013.js: Flood the first 10 videos all at once.
      Should provide better test coverage for race conditions (especially
      on localhost where the latency is ~0)

Mon Oct 07 10:02 2013 CDT
    * lib/channel.js: Fix several cases where an unregistered channel
      might attempt to make a database call which then fails.

Mon Oct 07 00:08 2013 CDT
    * lib/playlist.js: Fix /clean not behaving properly (actually was a
      consequence of the remove() function)
    * lib/get-info.js: Send more specific error messages
    * www/assets/js/callbacks.js: Minor fix to the queueFail callback

Sun Oct 06 01:42 2013 CDT
    * lib/channel.js, www/assets/js/callbacks.js: Include the link that
      failed with the queueFail packet.  Clicking the "+ n more" tag
      shows all links that failed for stacked messages
    * lib/utilities.js: Add a formatLink function

Sat Oct 05 20:41 2013 CDT
    * lib/user.js: Fix a bug where duplicate guestnames were allowed with