@@ -67,6 +67,18 @@ function initIpThrottleCleanup(Server) {
     }, 5 * 60 * 1000);
 }
 
+function initChannelDumper(Server) {
+    var CHANNEL_SAVE_INTERVAL = Server.cfg["channel-save-interval"] * 60000;
+    setInterval(function () {
+        for (var i = 0; i < Server.channels.length; i++) {
+            var chan = Server.channels[i];
+            if (!chan.dead && chan.users && chan.users.length > 0) {
+                chan.saveDump();
+            }
+        }
+    }, CHANNEL_SAVE_INTERVAL);
+}
+
 module.exports = function (Server) {
     if (init === Server) {
         Logger.errlog.log("WARNING: Attempted to re-init background tasks");
@@ -77,4 +89,5 @@ module.exports = function (Server) {
     initStats(Server);
     initAliasCleanup(Server);
     initIpThrottleCleanup(Server);
+    initChannelDumper(Server);
 };
