@@ -276,7 +276,6 @@ Channel.prototype.loadDump = function() {
                 self.js = data.js || "";
                 self.sendAll("channelCSSJS", {css: self.css, js: self.js});
                 self.initialized = true;
-                setTimeout(function() { incrementalDump(self); }, 300000);
             }
             catch(e) {
                 Logger.errlog.log("Channel dump load failed: ");
@@ -310,14 +309,6 @@ Channel.prototype.saveDump = function() {
     };
     var text = JSON.stringify(dump);
     fs.writeFileSync(path.join(__dirname, "../chandump", this.name), text);
-}
-
-// Save channel dumps every 5 minutes, in case of crash
-function incrementalDump(chan) {
-    if(!chan.dead && chan.users && chan.users.length > 0) {
-        chan.saveDump();
-        setTimeout(function() { incrementalDump(chan); }, 300000);
-    }
 }
 
 Channel.prototype.readLog = function (filterIp, callback) {
