@@ -14,41 +14,42 @@ var Logger = require("./logger");
 var nodemailer = require("nodemailer");
 
 var defaults = {
-    "mysql-server"        : "localhost",
-    "mysql-db"            : "cytube",
-    "mysql-user"          : "cytube",
-    "mysql-pw"            : "supersecretpass",
-    "express-host"        : "0.0.0.0",
-    "io-host"             : "0.0.0.0",
-    "enable-ssl"          : false,
-    "ssl-keyfile"         : "",
-    "ssl-passphrase"      : "",
-    "ssl-certfile"        : "",
-    "ssl-port"            : 443,
-    "asset-cache-ttl"     : 0,
-    "web-port"            : 8080,
-    "io-port"             : 1337,
-    "ip-connection-limit" : 10,
-    "guest-login-delay"   : 60,
-    "trust-x-forward"     : false,
-    "enable-mail"         : false,
-    "mail-transport"      : "SMTP",
-    "mail-config"         : {
+    "mysql-server"          : "localhost",
+    "mysql-db"              : "cytube",
+    "mysql-user"            : "cytube",
+    "mysql-pw"              : "supersecretpass",
+    "express-host"          : "0.0.0.0",
+    "io-host"               : "0.0.0.0",
+    "enable-ssl"            : false,
+    "ssl-keyfile"           : "",
+    "ssl-passphrase"        : "",
+    "ssl-certfile"          : "",
+    "ssl-port"              : 443,
+    "asset-cache-ttl"       : 0,
+    "web-port"              : 8080,
+    "io-port"               : 1337,
+    "ip-connection-limit"   : 10,
+    "guest-login-delay"     : 60,
+    "channel-save-interval" : 5,
+    "trust-x-forward"       : false,
+    "enable-mail"           : false,
+    "mail-transport"        : "SMTP",
+    "mail-config"           : {
         "service"  : "Gmail",
         "auth"     : {
             "user" : "some.user@gmail.com",
             "pass" : "supersecretpassword"
         }
     },
-    "mail-from"           : "some.user@gmail.com",
-    "domain"              : "http://localhost",
-    "ytv3apikey"          : "",
-    "enable-ytv3"         : false,
-    "ytv2devkey"          : "",
-    "stat-interval"       : 3600000,
-    "stat-max-age"        : 86400000,
-    "alias-purge-interval": 3600000,
-    "alias-max-age"       : 2592000000
+    "mail-from"             : "some.user@gmail.com",
+    "domain"                : "http://localhost",
+    "ytv3apikey"            : "",
+    "enable-ytv3"           : false,
+    "ytv2devkey"            : "",
+    "stat-interval"         : 3600000,
+    "stat-max-age"          : 86400000,
+    "alias-purge-interval"  : 3600000,
+    "alias-max-age"         : 2592000000
 }
 
 function save(cfg, file) {
